# psl-workflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-ocr-extra.txt  requirements.txt
docs/superpowers/plans/: 2026-05-14-psl-workflow.md
examples/data/ingested/: clean_contract.json  messy_notice.json  scanned_notice.json
examples/outputs/: evaluation_results.json  first_draft.md  improved_draft.md
src/psl_workflow/: __init__.py  api.py  cli.py  evaluation.py
src/psl_workflow/generation/: __init__.py  engine.py
src/psl_workflow/learning/: __init__.py  feedback.py  memory.py  models.py
src/psl_workflow/processing/: __init__.py  ingestion.py  models.py  samples.py
src/psl_workflow/retrieval/: __init__.py  chunking.py  embeddings.py  models.py  store.py
tests/: test_api.py  test_generation.py  test_learning.py  test_ollama_cloud.py  test_processing.py  test_retrieval.py
