[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pearson-specter-litt-workflow"
version = "0.1.0"
description = "Internal legal document ingestion, RAG drafting, and feedback learning workflow."
requires-python = ">=3.11,<3.14"
readme = "README.md"

[project.scripts]
psl-workflow = "psl_workflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
